--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,50 +1,75 @@
 [project]
-name = "qna-agent"
-version = "0.1.0"
-description = "A QnA agent using LangGraph with CSV download and code interpreter capabilities"
-authors = [
-    {name = "Your Name", email = "your.email@example.com"}
-]
-readme = "README.md"
+name = "enhanced-qna-agent"
+version = "1.0.0"
+description = "Enhanced QnA Agent System - MVP"
 requires-python = ">=3.9"
+
 dependencies = [
-    "langgraph",
-    "langchain",
-    "langchain-openai",
-    "requests",
-    "pandas",
-    "numpy",
-    "matplotlib",
-    "seaborn",
-    "plotly",
-    "python-dotenv",
-    "streamlit",
+    # Core dependencies
+    "streamlit>=1.28.0",
+    "flask>=2.3.0",
+    "flask-socketio>=5.3.0",
+    "flask-cors>=4.0.0",
+    "python-socketio[client]>=5.8.0",
+    "python-engineio>=4.7.0",
+    # Database
+    "psycopg2-binary>=2.9.0",
+    # Data processing
+    "pandas>=2.0.0",
+    "numpy>=1.24.0",
+    # Visualization
+    "matplotlib>=3.7.0",
+    "seaborn>=0.12.0",
+    "plotly>=5.15.0",
+    # AI/ML
+    "langchain>=0.0.300",
+    "langchain-openai>=0.0.2",
+    "openai>=1.0.0",
+    # HTTP requests
+    "requests>=2.31.0",
+    # Environment and configuration
+    "python-dotenv>=1.0.0",
+    # Utilities
+    "python-dateutil>=2.8.0",
+    "websocket-client>=1.8.0",
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest==7.4.3",
-    "black==23.11.0",
-    "flake8==6.1.0",
-    "mypy==1.7.1",
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "black>=23.0.0",
+    "isort>=5.12.0",
+    "flake8>=6.0.0",
+    "mypy>=1.0.0",
 ]
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+[project.scripts]
+start-backend = "scripts.start_backend:main"
+start-frontend = "scripts.start_frontend:main"
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "black>=23.0.0",
+    "isort>=5.12.0",
+    "flake8>=6.0.0",
+    "mypy>=1.0.0",
+]
 
 [tool.black]
 line-length = 88
 target-version = ['py39']
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
 
 [tool.mypy]
 python_version = "3.9"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
-
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-python_files = ["test_*.py"]
-python_classes = ["Test*"]
-python_functions = ["test_*"] 
