feat: Add voice integration, markdown rendering, and comprehensive logging system
- Add ElevenLabs voice integration (STT/TTS) with markdown cleaning
- Implement voice transcription decoupling for better UX
- Add comprehensive logging system with log rotation
- Add markdown rendering for AI responses in frontend
- Update README with all new features and documentation
- Add voice components (VoiceInput, VoiceOutput, MarkdownRenderer)
- Implement conversation logging for AI interactions
- Add voice service testing and development tools

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     gcc \
     postgresql-client \
     curl \
+    # ffmpeg \  # Commented out - not needed for ElevenLabs TTS only
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install Python dependencies
