--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ requires-python = ">=3.9"
 
 dependencies = [
     # Core dependencies
-
     "flask>=2.3.0",
     "flask-socketio>=5.3.0",
     "flask-cors>=4.0.0",
@@ -25,6 +24,9 @@ dependencies = [
     "langchain>=0.0.300",
     "langchain-openai>=0.0.2",
     "openai>=1.0.0",
+    # Voice Processing
+    "elevenlabs>=0.2.0",
+    # "openai-whisper>=20231117",  # Commented out - not needed for ElevenLabs TTS
     # HTTP requests
     "requests>=2.31.0",
     # Environment and configuration
